workspace = { members = ["examples/oauth-web"] }
[package]
name = "tiktok-business"
version = "0.2.1"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "TikTok Business API library."
repository = "https://github.com/aoyagikouhei/tiktok-business"
keywords = ["tiktok", "api", "client", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/tiktok-business"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = [ "serde" ] }
isocountry = "0.3.2"
itertools = "0.12"
percent-encoding = "2.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = "1"
