workspace = { members = ["examples/oauth-web"] }
[package]
name = "tiktok-business"
version = "0.6.0"
edition = "2024"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "TikTok Business API library."
repository = "https://github.com/aoyagikouhei/tiktok-business"
keywords = ["tiktok", "api", "client", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/tiktok-business"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = [ "serde" ] }
hex = { version = "0.4", optional = true }
hmac = { version = "0.13", optional = true }
isocountry = "0.3.2"
itertools = "0.14"
percent-encoding = "2.3"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "query"] }
reqwest-builder-retry = { version = "0.8", features = ["convenience"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.11", optional = true }
strum = { version = "0.28", features = ["derive"], optional = true }
thiserror = "2"
regex = "1"

[features]
webhook = ["hex", "hmac", "sha2", "strum"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = "1"
