[package]
name = "oauth-web"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.11"
tiktok-business = { path="../..", features = ["rustls-tls"], default-features = false }
url = "2.5"